BACK END - CRUD

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 PORT=8080
+
+MONGODB_CNN=mongodb+srv://admin_erick:EYVs0VG0ywS37cJb@cluesternodeapi.m9grusa.mongodb.net/cafeDB
+
+#USER=admin_erick
+#PASS=EYVs0VG0ywS37cJb
+
+
